KUSTOMIZE/fastapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: boudun/fastapi:latest
        ports:
        - containerPort: 5000        
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  namespace: standard
spec:
  selector:
    app: fastapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
