KUSTOMIZE/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - secretName: rancher-secret
      hosts:
        - exam.kub.boudun.cloudns.ph
  rules:
  - host: exam.kub.boudun.cloudns.ph
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
             service:
              name: fastapi-service
              port:
                number: 80
